--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
 @import "sentences";
+@import "timeline";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
