--- a/app/views/sentences/_sentence_body.html.erb
+++ b/app/views/sentences/_sentence_body.html.erb
@@ -1,9 +1,26 @@
+<div id="sentence-data" data-structure=<%= @sentence.structure %> data-tense=<%= @sentence.tense %> data-tense-modifier= <%= @sentence.tense_modifier %>>
+</div>
+
+<%= link_to eval("structure_options_sentence_path(@sentence.id)"), class: "block structure editable #{is_editing?('structure')}", remote: true  do %>
+	<%= fa_icon("cog") %>Structure
+<% end %>
+&nbsp;
 <% @sentence.blocks.each do |block| %>
-	<span>
-		<% if Sentence::EDITABLE.include?(block[:class]) %>
-		<%= link_to block[:words], eval("#{block[:class]}_options_sentence_path(1)"), class: "#{block[:class]} editable #{is_editing?(block[:class])}", remote: true %>
-		<% else %>
-		<%= block[:words] %>
+	<% if Sentence::EDITABLE.include?(block[:class]) %>
+		<%= link_to eval("#{block[:class]}_options_sentence_path(@sentence.id)"), class: "block editable #{block[:class]} #{is_editing?(block[:class])}", remote: true  do %>
+			<div class="block-header">
+				<%= fa_icon("edit") %>
+				<%= block[:class] %>
+			</div>
+			<%= block[:words] %>
+		<% end %>		
+	<% else %>
+		<%= content_tag(:div, class: [block[:class], "block"]) do %>
+			<div class="block-header">
+				<%= block[:class] %>
+			</div>
+			<%= block[:words] %>
 		<% end %>
-	</span>
+	<% end %>
+	&nbsp;
 <% end %>
