--- a/app/views/sentences/_verb_options.html.erb
+++ b/app/views/sentences/_verb_options.html.erb
@@ -1,9 +1,29 @@
 <div id= "verb-options" class="options-container">
-<h3>Verb</h3>
-	<% @verbs.each do |verb| %>
-		<%= form_for @sentence, remote: true do |f|  %>
-			<%= f.hidden_field :verb_id, value: verb.id %>
-			<%= f.submit "#{verb.word}", class: "word #{option_active?(:verb_id, verb.id)}" %>
+  <div class="panel panel-default word-select">	
+    <div class="panel-heading">
+      <h1 class="panel-title">Verb</h1>
+    </div>
+    <div class="panel-body">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search for...">
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button">Go!</button>
+        </span>
+      </div>
+	  <% @verbs.each do |verb| %>
+        <%= form_for @sentence, remote: true do |f|  %>
+		  <%= f.hidden_field :verb_id, value: verb.id %>
+		  <%= f.submit "#{verb.word}", class: "word #{option_active?(:verb_id, verb.id)}" %>
 		<% end %>
-	<% end %>
+	  <% end %>
+	</div>
+  </div>
+
+<div id= "explanation" class="panel panel-default">	
+	<div class="panel-heading">
+	  <h1 class="panel-title"><%= @sentence.verb.word %></h1>
+	</div>
+    <div class="panel-body">
+    </div>
+  </div>
 </div>
