--- a/app/views/sentences/subject_options.js.erb
+++ b/app/views/sentences/subject_options.js.erb
@@ -1,3 +1,3 @@
 $(".editable").removeClass("active")
 $(".subject").addClass("active")
-$("#input-options").html("<%= j render 'editing' %>")
+$("#current-options").html("<%= j render 'editing' %>")
