--- a/app/views/sentences/_subject.html.erb
+++ b/app/views/sentences/_subject.html.erb
@@ -1,8 +1,10 @@
 <div id= "subject-options" class="options-container">
 
   <div class="panel panel-default word-select">	
-    <div class="panel-heading">
-      <h1 class="panel-title">Subject</h1>
+    <div class="panel-header">
+      <%= fa_icon "circle" %>
+      <h4><%= session[:editing].capitalize %></h4>
+      <%= fa_icon "circle"%>
     </div>
     <div class="panel-body">
       <div class="input-group">
